# rocket-man

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  manage.py  pyproject.toml
deployment/: nginx-base.conf  nginx-bernard.conf  supervisord.conf
i18n/en/: responses.csv
rocket_man/: platforms.py  schemas.py  services.py  settings.py  states.py  store.py  transitions.py  triggers.py  utils.py
rocket_man/states/: __init__.py  base.py  common.py  goodbye.py  has_launched.py  hello.py  maybe_has_launched.py
rocket_man/storage/: __init__.py  context.py  redis.py  register.py
